[package]
name = "activity_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
json-ld = "0.17.0"
serde = { version = "1.0.203", features = ["derive"]}
actix-web = "4"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros"]}
config = { version = "0.14.0", features = ["toml"]}
