[package]
name = "activity_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
# json-ld = "0.17.0"
serde = { version = "1.0.203", features = ["derive"]}
# actix-web = {version = "4", features = ["rustls"]}
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros"]}
config = { version = "0.14.0", features = ["toml"]}
serde_json = { version = "1.0.117", features = ["preserve_order"]}
# rustls = "0.23.9"
# rustls-pemfile = "2.1.2"

actix-web = { version = "4" }
# rustls = "0.23.9"
argon2 = "0.5.3"
openssl = "0.10.64"
httpdate = "1.0.3"
reqwest = "0.12.4"
url = {version = "2.5.1", features = ["serde"]}
xsd-types = {version = "0.9.4", features = ["serde"]}
chrono = "0.4.38"
# rustls = "0.23"
# rustls-pemfile = "2"
# acme-rfc8555 = "0.1"
# tokio = "1.38.0"
# actix-files = "0.6.5"
# eyre = "0.6.12"
# env_logger = "0.11.3"
# color-eyre = "0.6.3"
# log = "0.4.21"
